--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,36 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:32:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.TabAvailabilityValidation()[pri:4, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">TabAvailabilityValidation</td> 
-  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:32:29</td>   <td>3708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.alertTabValidation()[pri:6, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">alertTabValidation</td> 
-  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="8d8680">  <td>19/10/30 20:31:44</td>   <td>-41177</td> <td>&nbsp;</td><td title="&lt;&lt;TC0001_login_Page_Verification.applicationClose()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@51399530]">&lt;&lt;applicationClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:35:36</td>   <td>190545</td> <td>&nbsp;</td><td title="&lt;&lt;TC0002_login_With_Exmpirix_Admin.applicationClose()[pri:0, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">&lt;&lt;applicationClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="8d8680">  <td>19/10/30 20:31:25</td>   <td>-60898</td> <td>&nbsp;</td><td title="&gt;&gt;TC0001_login_Page_Verification.applicationLaunch()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@51399530]">&gt;&gt;applicationLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:31:44</td>   <td>-40999</td> <td>&nbsp;</td><td title="&gt;&gt;TC0002_login_With_Exmpirix_Admin.applicationLaunch()[pri:0, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">&gt;&gt;applicationLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:32:26</td>   <td>634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.dashBoardTabValidation()[pri:5, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">dashBoardTabValidation</td> 
-  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:32:25</td>   <td>-402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.footerMandatoryDetails()[pri:3, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">footerMandatoryDetails</td> 
-  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:35:31</td>   <td>185656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.hammerTabValidation()[pri:11, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">hammerTabValidation</td> 
-  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:32:24</td>   <td>-958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.headerMandatoryDetails()[pri:2, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">headerMandatoryDetails</td> 
-  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="8d8680">  <td>19/10/30 20:31:39</td>   <td>-46393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0001_login_Page_Verification.logInScreenVerification()[pri:1, instance:VW_TC.TC0001_login_Page_Verification@51399530]">logInScreenVerification</td> 
-  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:31:59</td>   <td>-26326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">logInWithExpirixAdmin</td> 
-  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:33:37</td>   <td>71229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.scriptTabValidation()[pri:9, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">scriptTabValidation</td> 
-  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:33:23</td>   <td>57476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.tagTabValidation()[pri:8, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">tagTabValidation</td> 
-  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:32:32</td>   <td>6438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.testTabValidation()[pri:7, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">testTabValidation</td> 
-  <td>main@989892772</td>   <td></td> </tr>
-<tr bgcolor="72937b">  <td>19/10/30 20:35:17</td>   <td>171282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.variableTabValidation()[pri:10, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@3b69e7d1]">variableTabValidation</td> 
-  <td>main@989892772</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.TabAvailabilityValidation()[pri:4, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">TabAvailabilityValidation</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:52</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.alertTabValidation()[pri:6, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">alertTabValidation</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="a66a6a">  <td>19/10/31 20:48:44</td>   <td>-8027</td> <td>&nbsp;</td><td title="&gt;&gt;TC0001_login_Page_Verification.applicationLaunch()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@6ca8564a]">&gt;&gt;applicationLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:48</td>   <td>-3462</td> <td>&nbsp;</td><td title="&gt;&gt;TC0002_login_With_Exmpirix_Admin.applicationLaunch()[pri:0, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">&gt;&gt;applicationLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:52</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.dashBoardTabValidation()[pri:5, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">dashBoardTabValidation</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:52</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.footerMandatoryDetails()[pri:3, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">footerMandatoryDetails</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:52</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.hammerTabValidation()[pri:11, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">hammerTabValidation</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:52</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.headerMandatoryDetails()[pri:2, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">headerMandatoryDetails</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="a66a6a">  <td>19/10/31 20:48:48</td>   <td>-3516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0001_login_Page_Verification.logInScreenVerification()[pri:1, instance:VW_TC.TC0001_login_Page_Verification@6ca8564a]">logInScreenVerification</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:52</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">logInWithExpirixAdmin</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:52</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.scriptTabValidation()[pri:9, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">scriptTabValidation</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:52</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.tagTabValidation()[pri:8, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">tagTabValidation</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:52</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.testTabValidation()[pri:7, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">testTabValidation</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="f7898b">  <td>19/10/31 20:48:52</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.variableTabValidation()[pri:10, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@1ea9f6af]">variableTabValidation</td> 
+  <td>main@350068407</td>   <td></td> </tr>
 </table>
