--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="687592">  <td>19/10/28 19:44:12</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0001_login_Page_Verification.applicationLaunch()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@33d512c1]">&gt;&gt;applicationLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@945591847</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/10/28 19:44:32</td>   <td>20733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0001_login_Page_Verification.logInScreenVerification()[pri:1, instance:VW_TC.TC0001_login_Page_Verification@33d512c1]">logInScreenVerification</td> 
-  <td>main@945591847</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/10/28 19:44:40</td>   <td>28679</td> <td>&nbsp;</td><td title="&lt;&lt;TC0001_login_Page_Verification.applicationClose()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@33d512c1]">&lt;&lt;applicationClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@945591847</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:43:47</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0013_login_With_Client_Developer.applicationLaunch()[pri:0, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">&gt;&gt;applicationLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:44:19</td>   <td>32011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0013_login_With_Client_Developer.logInWithPartnerClient_Development()[pri:1, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">logInWithPartnerClient_Development</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:44:26</td>   <td>39376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0013_login_With_Client_Developer.headerMandatoryDetails()[pri:2, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">headerMandatoryDetails</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:45:14</td>   <td>86967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0013_login_With_Client_Developer.footerMandatoryDetails()[pri:3, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">footerMandatoryDetails</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:45:14</td>   <td>87023</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0013_login_With_Client_Developer.TabValidation()[pri:4, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">TabValidation</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:45:14</td>   <td>87035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0013_login_With_Client_Developer.dashBoardTabValidation()[pri:5, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">dashBoardTabValidation</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:45:14</td>   <td>87054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0013_login_With_Client_Developer.alertTabValidation()[pri:6, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">alertTabValidation</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:45:14</td>   <td>87069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0013_login_With_Client_Developer.testTabValidation()[pri:7, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">testTabValidation</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:45:14</td>   <td>87086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0013_login_With_Client_Developer.tagTabValidation()[pri:8, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">tagTabValidation</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:45:14</td>   <td>87100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0013_login_With_Client_Developer.scriptTabValidation()[pri:9, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">scriptTabValidation</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:45:14</td>   <td>87114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0013_login_With_Client_Developer.variableTabValidation()[pri:10, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">variableTabValidation</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/31 21:45:14</td>   <td>87127</td> <td>&nbsp;</td><td title="&lt;&lt;TC0013_login_With_Client_Developer.applicationClose()[pri:0, instance:VW_TC.TC0013_login_With_Client_Developer@3911c2a7]">&lt;&lt;applicationClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944427387</td>   <td></td> </tr>
 </table>
