--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,18 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test Case: 001- Login Page Verification </a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">233</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test Case: 001- Login Page Verification </a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">26,467</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test Case: 001- Login Page Verification  &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">VW_TC.TC0001_login_Page_Verification</td><td><a href="#m0">applicationLaunch</a></td><td rowspan="1">1572550984569</td><td rowspan="1">17</td></tr><tr><th colspan="4">Test Case: 001- Login Page Verification  &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="1">VW_TC.TC0001_login_Page_Verification</td><td><a href="#m1">applicationClose</a></td><td rowspan="1">1572550984788</td><td rowspan="1">0</td></tr><tr><th colspan="4">Test Case: 001- Login Page Verification  &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">VW_TC.TC0001_login_Page_Verification</td><td><a href="#m2">logInScreenVerification</a></td><td rowspan="1">1572550984771</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test Case: 001- Login Page Verification  &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">VW_TC.TC0001_login_Page_Verification</td><td><a href="#m0">logInScreenVerification</a></td><td rowspan="1">1572554722826</td><td rowspan="1">6739</td></tr></tbody>
 </table>
-<h2>Test Case: 001- Login Page Verification </h2><h3 id="m0">VW_TC.TC0001_login_Page_Verification#applicationLaunch</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at resources.basePropertiesSeln.intializeDriver(basePropertiesSeln.java:57)
-	at VW_TC.TC0001_login_Page_Verification.applicationLaunch(TC0001_login_Page_Verification.java:31)
-... Removed 24 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">VW_TC.TC0001_login_Page_Verification#applicationClose</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">VW_TC.TC0001_login_Page_Verification#logInScreenVerification</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at resources.basePropertiesSeln.intializeDriver(basePropertiesSeln.java:57)
-	at VW_TC.TC0001_login_Page_Verification.applicationLaunch(TC0001_login_Page_Verification.java:31)
-... Removed 24 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test Case: 001- Login Page Verification </h2><h3 id="m0">VW_TC.TC0001_login_Page_Verification#logInScreenVerification</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
