--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="88af83">  <td>19/11/01 02:15:29</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC0001_login_Page_Verification.applicationClose()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@69c81773]">&lt;&lt;applicationClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@304354378</td>   <td></td> </tr>
-<tr bgcolor="88af83">  <td>19/11/01 02:15:03</td>   <td>-26335</td> <td>&nbsp;</td><td title="&gt;&gt;TC0001_login_Page_Verification.applicationLaunch()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@69c81773]">&gt;&gt;applicationLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@304354378</td>   <td></td> </tr>
-<tr bgcolor="88af83">  <td>19/11/01 02:15:22</td>   <td>-6819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0001_login_Page_Verification.logInScreenVerification()[pri:1, instance:VW_TC.TC0001_login_Page_Verification@69c81773]">logInScreenVerification</td> 
-  <td>main@304354378</td>   <td></td> </tr>
+<tr bgcolor="6fbf7f">  <td>19/11/06 00:33:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0001_login_Page_Verification.applicationLaunch()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@6340e5f0]">&gt;&gt;applicationLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1281414889</td>   <td></td> </tr>
+<tr bgcolor="6fbf7f">  <td>19/11/06 00:33:15</td>   <td>5097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0001_login_Page_Verification.logInScreenVerification()[pri:1, instance:VW_TC.TC0001_login_Page_Verification@6340e5f0]">logInScreenVerification</td> 
+  <td>main@1281414889</td>   <td></td> </tr>
 </table>
